bpo-42008: Fix internal _random.Random() seeding for the one argument case (GH-22668)